# Arka

./: .gitignore  CMakeLists.txt  README.md  debug.cmake  example_1.txt  example_2  example_2.txt  example_3.txt  example_4.txt  example_5.txt  example_6.txt
src/: Tokenizer.cpp  Tokenizer.h  Types.h  main.cpp  types.cpp
src/parser/: Parser.cpp  Parser.h
src/parser/AST/: AST.h
src/parser/item/: item.h
src/parser/parser_types/Body/: Body.cpp  Body.h
src/parser/parser_types/Class/: Class.cpp  Class.h  ClassClass.cpp  ClassClass.h
src/parser/parser_types/Expression/: Expression.cpp  Expression.h
src/parser/parser_types/Function/: Function.cpp  Function.h
src/parser/parser_types/Preprocess/: Preprocess.cpp  Preprocess.h
src/parser/parser_types/Program/: Program.cpp  Program.h
src/tokenizer/: Tokenizer.cpp  Tokenizer.h
src/utils/: ReadFile.cpp  ReadFile.h
